# CLEED

./: .codacy.yml  .cproject  .dockerignore  .fossa.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .project  .readthedocs.yaml  .werker.yml  AGENTS.md  AUTHORS.txt  CLEED.sln  CLEED.vcxproj  CLEED.vcxproj.filters  CMakeLists.bak  CMakeLists.txt  CONTRIBUTING.md  CPackOptions.cmake.in  ChangeLog.txt  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile.am  Readme.md  android.toolchain.cmake  apt-qt6.txt  apt.txt  autogen.sh  cleed.spec  cmake_install.cmake  cmake_uninstall.cmake  cmake_uninstall.cmake.in  conanfile.txt  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.in  (+6 more)
src/: CLEED_eclipse_formatting_profile.xml  CMakeLists.txt  MANIFEST.in  Makefile.am  PythonSyntaxHighlighter.py  cleed-gui.pyw  cleed.pri  cleed.pro  project.py  setup.cfg
src/aoi_leed/: .cproject  .project  CMakeLists.txt  Makefile.am  Makefile.gcc  caoi_leed_bsr.c  caoi_leed_help.c  caoi_leed_main.c
src/aoi_rfac/: .cproject  .project  CMakeLists.txt  Makefile.am  Makefile.gcc  caoi_rfac_ctr.c  caoi_rfac_help.c  caoi_rfac_main.c
src/c++/: .cproject  .project  AoIRFactor.h  Atom.cc  Atom.h  BaseElement.cc  BulkModel.h  BulkModel.hh  Crystal.h  Element.h  IVCurve.cc  IVCurve.h  IVCurvePair.cc  IVCurvePair.h  IVCurvePair.hh  LEED.h  Layer.cc  Layer.h  Model.h  Pattern.h  PhaseShift.cc  PhaseShift.h  RFactor.cc  RFactor.h  RFactorArgs.cc  RFactorArgs.h  Search.cc  Search.h
src/cleed++/: .cproject  .gitignore  .project  AoIRFactor.h  CMakeLists.txt  IVCurve.cc  IVCurve.hh  IVCurvePair.cc  Model.hh  cleed++.pro  rfac.pri
src/cleed-gui/: .pydevproject.bak  README.md
src/cleed_core/: CMakeLists.txt  Makefile.am  cleed_core.c  cleed_curve.c
src/cleed_io/: CMakeLists.txt  Makefile.am  cleed_io.c
src/contrib/: CMakeLists.txt
src/debye/: CMakeLists.txt  Makefile.am  debye.c
src/ftsmooth/: .cproject  .gitignore  .project  CMakeLists.txt  Makefile.am  c_ftsmooth.pyx  cftsmooth.pxd  fts_offset_data.c  fts_print_data.c  fts_read_data.c  fts_rm_neg_data.c  fts_trim_data.c  ftsmooth.c  ftsmooth.pro  ftsmooth.py  ftsmooth.sln  ftsmooth.vcxproj  ftsmooth.vcxproj.filters  ftsmooth_debug.c  ftsmooth_help.c  ftsmooth_main.c  ftsmooth_parse_args.c  offset_data.c  print_data.c  read_data.c  remove_negative_data.c  test_fts_offset_data.c  test_fts_print_data.c  test_fts_rm_neg_data.c  test_fts_trim_data.c  trim_data.c
src/gui/: .gitignore  AtorbConfigWidget.ui  EnvironmentDialog.ui  ImportDialog.ui  LEED-PyV.ui  MDIMainWindow.ui  MainWindow.ui  PeriodicTable.ui  QtHelpBrowserWidget.py  SettingsDialog.py  UpdateDialog.py  UpdateDialog.ui  cartezianQwtDemo.py  ctr.py  interceptor.py  matplotlibQtWidget.py  res_rc.py  testMenu.py
src/include/: .gitignore  00-README  CLEED.H  CLEED.h  __init__.py  _cleed_matrix_gsl.h  _cleed_matrix_gsl_double.h  _cleed_matrix_gsl_float.h  _cleed_real_dec_alpha.h  _cleed_real_ibm.h  atom.h  attributes.h  basis.h  basis_vector.h  caoi_leed.h  caoi_leed.h.in  caoi_rfac.h  caoi_rfac.h.in  cblas_aux.h  cc_attribute.h  clapack.h  cleed_basic_matrix.h  cleed_blas.h  cleed_complex.h  cleed_core.h  cleed_cstring.h  cleed_io.h  cleed_linalg.h  cleed_matrix.h  cleed_mode.h  cleed_permutation.h  cleed_platform.h  cleed_real.h  cleed_string.h  cleed_types.h  cleed_util.h  cleed_vector.h  coord.h  copy_file.h  cpl.h  (+71 more)
src/latt/: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  Makefile.am  Readme.rst  basis++.cc  basis.c  c_latt.c  c_latt.pyx  clatt.pxd  coord++.cc  coord.c  debug.bat  debug.err  get_allocated_size.c  gmon.out  latt.c  latt.gdb  latt.pro  latt.py  latt.sln  latt.vcxproj  latt.vcxproj.filters  latt_help.c  latt_parse_args.c  lattice.c  lattice.pyx  lattice.sln  lattice.vcxproj  lattice.vcxproj.filters  make.bat  run.bat  test_fptr.c
src/latt-gui/: CMakeLists.txt  advancedoutput.ui  lattGUI.pro  latt_gui.hpp  latt_gui.hpp.in  lattmainwindow.cpp  lattmainwindow.h  lattmainwindow.ui  main.cpp  qcompile.cpp  qcompile.h
src/leed/: .gitignore  .project  Makefile  cleed.py  cleed.sln  cleed.vcxproj  cleed.vcxproj.filters  cleed_nsym.c  cleed_sym.c  err_code.c  float_equal.c  getrusage_win32.c  getrusage_win32.h  lbmgen.c  lbmselect.c  lbmset.c  leed_args.c  leed_beam.c  leed_bsrinp.c  leed_model.c  leed_phase.c  leed_var.c  linpbullayer.c  linpovlaysym.c  linpphase.c  linpphasend.c  linprdbulnd.c  linprdbulsym.c  linprdovlnd.c  linprdovlsym.c  linprdpar.c  lldpotstep0.c  lmsbravl.c  lmsbravlnd.c  lmsbravlsym.c  lmscomplsym.c  lmslsumii.c  lmstmatndii.c  lmsymat.c  lmsymatset.c  (+26 more)
src/leed_nsym/: .cproject  .project  CMakeLists.txt  Makefile  Makefile.am  Makefile.gcc  c_leed.pyx  cblas_aux.c  cleed.c  cleed.vcxproj  cleed.vcxproj.filters  cleed_mode.c  cleed_nsym.c  cribasfun.c  err_code.c  err_code.h  float_equal.c  getrusage_win32.c  getrusage_win32.h  gsl_aux.c  lbmgen.c  lbmgensym.c  lbmselect.c  lbmset.c  leed.pro  leed_args.c  leed_beam.c  leed_bsrinp.c  leed_crystal.c  leed_energy_loop.c  leed_layer.c  leed_model.c  leed_phase.c  leed_var.c  lhelp.c  linpbullayer.c  linpbullaysym.c  linpdebtemp.c  linpmatlm.c  linpovllayer.c  (+74 more)
src/leed_sym/: .cproject  .gitignore  .project  CMakeLists.txt  INFO  Makefile.am  Makefile.gcc  cleed_sym.c  f_theta.c  lbmgensym.c  lbmrotmat.c  lhelpsym.c  linpbullaysym.c  linpovlaysym.c  linpphase.c  linprdbulsym.c  linprdovlsym.c  lmsbravl.c  lmsbravlsym.c  lmscompksum.c  lmscompl.c  lmscomplsym.c  lmsltok.c  louthead2.c  loutintsym.c  lpcmktl.c  lpcupdate.c  lreadpar.c  lsymcheck.c  lwritepar.c
src/mkiv-gui/: CMakeLists.txt  ConvertDialog.py  Rename.ui  (+18 more)
test/: CMakeLists.txt  Readme.rst
tests/: CMakeLists.txt  test_cleed_mode.c  test_lattice_read.c  test_lattice_read_edge_cases.c  test_lattice_setup.c  test_rfac_rs.c  test_rfac_spline.c  test_search_amebsa.c  test_search_amoeba.c  test_search_de.c  test_search_optimizer.c  test_search_parse.c  test_search_powell.c  test_search_pso.c  test_search_simplex.c  test_search_vertex_stats.c  test_support.c  test_support.h
tools/: check_nr_free.py  pyproject.toml
(+2250 files in other folders)
