### Root automake file for CLEED ###
# Process this file with automake to produce Makefile.in

SUBDIRS = src
EXTRA_DIST = autogen.sh
data_DATA = examplesdocdir = docdoc_DATA = doc/*.pdfphasedir = phasephase_DATA = data/phase
man_MANS = man/*
if WIN32    data_DATA += data/templates data/win32/icons else    data_DATA += shareendif